k3s-manifest/netdata/netdata-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netdata
  namespace: netdata
  labels:
    app: netdata
    component: monitoring
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "19999"
    prometheus.io/path: "/api/v1/allmetrics"
spec:
  selector:
    app: netdata
    component: monitoring
  ports:
    - port: 19999
      targetPort: 19999
      name: http
      protocol: TCP
  type: ClusterIP
